# st5-escape-to-eclipse

./: .gitignore  CMakeLists.txt  README.md  STORY.md  build.sh  cpp_sfml-template.sln  run.sh
bin-int/Debug-windows-x86_64/cpp_sfml-template/: cpp_sfml-template.exe.recipe  resource.res  vc143.idb
bin-int/Debug-windows-x86_64/cpp_sfml-template/Physics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Physics.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Escape-To-Eclipse.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters
build_vs/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  game_lib.vcxproj  game_lib.vcxproj.filters
build_vs/lib/Debug/: game_lib.lib  sfml-graphics-d.exp  sfml-system-d.exp  sfml-window-d.exp
build_vs/lib/game_lib.dir/Debug/: game_lib.lib.recipe
build_vs/lib/game_lib.dir/Debug/game_lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_vs/main.dir/Debug/: main.exe.recipe  main.ilk
build_vs/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_vs/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_vs/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build_vs/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+1 more)
cpp_sfml-template/: Bullet.h  Button.h  Game.cpp  HighscoreManager.cpp  HighscoreManager.h  Menu.cpp  Menu.h  Obstacle.h  Physics.aps  Physics.rc  SettingsMenu.h  SoundEngine.h  cpp_sfml-template.vcxproj  obstacale.cpp  planet.cpp  resource.aps  resource.h  resource.rc
cpp_sfml-template/Sound/Licenses/: beats-smoke-143172-license.txt
cpp_sfml-template/src/: Bullet.cpp  Bullet.h  Button.cpp  Button.h  Enemy.cpp  Enemy.h  Enemy2.cpp  Enemy2.h  Game.cpp  Game.h  KeybindsMenu.cpp  KeybindsMenu.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Obstacle.cpp  Obstacle.h  PauseMenu.cpp  PauseMenu.h  Planet.cpp  Planet.h  SettingsMenu.cpp  SettingsMenu.h  SoundEngine.cpp  SoundEngine.h  WaveManager.cpp  WaveManager.h  main.cpp  planet.cpp  planet.h
lib/: CMakeLists.txt
lib/PlanetarySystem/: PlanetarySystem.h
samples/Physics-Demo/: Physics-Demo.sln
samples/Physics-Demo/Physics-Demo/: cpp_sfml-template.vcxproj
samples/Physics-Demo/Physics-Demo/src/: physics SFML.cpp
src/: CMakeLists.txt  main.cpp
src/System/: System.cpp  System.h
visual-studio-dev/escape-to-eclipse/: escape-to-eclipse.sln
visual-studio-dev/escape-to-eclipse/escape-to-eclipse/: DevUtils.h  EventHandler.h  GameConfigManagement.cpp  GameConfigManagement.h  GameEngine.cpp  GameEngine.h  escape-to-eclipse.vcxproj  escape-to-eclipse.vcxproj.filters  main.cpp
(+24 files in other folders)
